--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,1 +1,5 @@
-p= link_to 'Ask question', new_question_path
+- if current_user
+  = link_to 'Ask question', new_question_path
+
+- @questions.each do |q|
+  p= link_to q.title, q
