--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,7 +1,9 @@
 =render "shared/errors", resource: @question
-= form_with model: @question do |f|
+= form_with model: @question, local: false do |f|
   = f.label :title
   = f.text_field :title
   = f.label :body
   = f.text_area :body
+  = f.label :files
+  = f.file_field :files, multiple: true
   = f.submit 'Ask'
