feat: user can add one or more files when  answer

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,3 +2,12 @@
   = answer.body
   -if current_user&.is_author?(answer)
     = link_to 'Delete answer', answer_path(answer), method: :delete
+
+    = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" }, local: false do |f|
+      = f.label :body, 'Your answer'
+      = f.text_area :body
+
+      = f.label :files
+      = f.file_field :files, multiple: true
+
+      = f.submit 'Save'
