--- a/app/views/answers/new.html.slim
+++ b/app/views/answers/new.html.slim
@@ -1,5 +1,7 @@
 = form_with model: [@question, @answer], local: true do |f|
   = f.label :body
   = f.text_area :body
+  = f.label :files
+  = f.file_field :files, multiple: true
 
   = f.submit 'Answer'
