--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,9 +15,19 @@
 = form_with model: [@question, @answer], class: 'new-answer', local: false do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
+
+  = f.label :files
+  = f.file_field :files, multiple: true
+  
   = f.submit 'Answer'
 
-h3 Answers:
+h3= 'Answers:'
 
 .answers
-  = render @question.answers
+  - @question.answers.each do |answer|
+    .answer
+      p= answer.body
+      - if answer.files.attached?
+        - answer.files.each do |file|
+          p
+            = link_to file.filename.to_s, url_for(file)
