--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,6 +8,11 @@
   - @question.files.each do |file|
     p
       = link_to file.filename.to_s, url_for(file)
+.links
+  p Links:
+  ul
+    - @question.links.each do |link|
+      li= link_to link.name, link.url
 
 .answer-errors
   = render 'shared/errors', resource: @answer
