--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -10,4 +10,11 @@
       = f.label :files
       = f.file_field :files, multiple: true
 
+      p Links:
+      p
+        = f.fields_for :links do |l|
+          = render 'shared/link_fields', f: l
+        .link
+          = link_to_add_association 'Add link', f, :links, partial: 'shared/link_fields'
+
       = f.submit 'Save'
