--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -17,7 +17,7 @@
 .answer-errors
   = render 'shared/errors', resource: @answer
 
-= form_with model: [@question, @answer], class: 'new-answer', data: { type: :html } do |f|
+= form_with model: [@question, @answer], class: 'new-answer', data: { type: :json } do |f|
   = f.label :body, 'Your answer'
   = f.text_area :body
 
